protox-parse/src/snapshots/protox_parse__tests__negative_ident_outside_default.snap
---
source: protox-parse/src/tests.rs
expression: "parse(\"\n        option opt = -foo;\n    \")"
---
Err(
    [
        NegativeIdentOutsideDefault {
            span: 22..26,
        },
    ],
)
